<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include layout="@layout/base_toolbar_ly"/>

    <TextView
        android:id="@+id/showKey_tv"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:hint="@string/show_key_text"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/showKey_find_key"
        android:layout_below="@+id/showKey_tv"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/show_key_input_hint"/>

    <Button
        android:id="@+id/showkey_btn"
        android:layout_below="@+id/showKey_find_key"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:enabled="false"
        android:text="@string/show_key_confirm_text"/>

    <Button
        android:id="@+id/showkey_addkey_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/show_key_addkey_text"/>

</RelativeLayout>
